set_source_files_properties(pacman_bfs_dfs_example1_cpp20.cpp PROPERTIES COMPILE_FLAGS -std=c++20)
set_source_files_properties(pacman_bfs_dfs_example2_cpp20.cpp PROPERTIES COMPILE_FLAGS -std=c++20)

add_executable(pacman_bfs_dfs_example1 pacman_bfs_dfs_example1.cpp)
add_executable(pacman_bfs_dfs_example1_cpp20 pacman_bfs_dfs_example1_cpp20.cpp)
add_executable(pacman_bfs_dfs_example2_cpp20 pacman_bfs_dfs_example2_cpp20.cpp)
